--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,12 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0"
+        "laravel/socialite": "^4.1",
+        "laravel/tinker": "^1.0",
+        "socialiteproviders/twitter": "^3.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
